force-app/main/default/objects/affectlayer__AffectLayerSettings__c/affectlayer__AffectLayerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AffectLayerSettings</label>
</CustomObject>