force-app/main/default/objects/affectlayer__AffectLayerSettings__c/fields/affectlayer__API_Key__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__API_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>