force-app/main/default/objects/affectlayer__AffectLayerSettings__c/fields/affectlayer__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Endpoint__c</fullName>
    <label>Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>