force-app/main/default/objects/affectlayer__AffectLayerSettings__c/fields/affectlayer__Password__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>