force-app/main/default/objects/affectlayer__AffectLayerSettings__c/fields/affectlayer__Send_Data_On_Trigger__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Send_Data_On_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sends data to Chorus in triggers</description>
    <label>Send Data On Trigger</label>
    <type>Checkbox</type>
</CustomField>