force-app/main/default/objects/affectlayer__AffectLayerSettings__c/fields/affectlayer__Username__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>